--- a/index.html
+++ b/index.html
@@ -6,3 +6,15 @@ title: "Hattie's Homepage"
 layout: home
 author_profile: true
 ---
+
+# Le Bao Han Tran
+
+HSH is silly.
+
+## This is my bio
+
+- First record
+- Second record
+
+## HSH is super stupid and kiddy
+How to make a website: Please contact HSH. He will make one for free
